--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.krkeco.watchit" >
 
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-permission android:name="android.permission.NETWORK" />
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/watchit"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+		
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -16,6 +21,28 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".DetailMovie"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+		
+
+		<activity
+			android:name=".SettingsActivity"
+			android:label="Settings"
+			android:parentActivityName="com.krkeco.whetherornot.MainActivity">
+			<meta-data
+				android:name="android.support.PARENT_ACTIVITY"
+				android:value="MainActivity"/>
+        </activity>
+		
+		
     </application>
 
 </manifest>
