--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/watchit"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-		
+
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -21,25 +21,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+				
 
         <activity
-            android:name=".DetailMovie"
+            android:name=".DetailActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-		
-
-		<activity
-			android:name=".SettingsActivity"
-			android:label="Settings"
-			android:parentActivityName="com.krkeco.whetherornot.MainActivity">
-			<meta-data
-				android:name="android.support.PARENT_ACTIVITY"
-				android:value="MainActivity"/>
         </activity>
 		
 		
